--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body class="flex flex-col items-center p-5">
 
 <div class="container w-full mx-auto">
-    <h1 class="text-4xl font-extrabold text-center mb-8 text-gradient">微信保险文案生成器</h1>
+    <h1 class="text-4xl font-extrabold text-center mb-8 text-gradient">微信文案生成器</h1>
 
     <div class="mb-6">
         <label for="productName" class="block text-gray-700 font-semibold mb-2 text-lg">产品名称：</label>
