--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 const pointEmojis = ['🤩', '💛', '☕️', '👍', '🎉', '🎁'];
                 const ctaPhrases = ['领 券', '限 时', '立 购', '速 抢'];
                 const ctaDecorations = ['(๑･ω･๑)', '(╯✧∇✧)╯', 'ヾ(•ω•`)o', '(σﾟ∀ﾟ)σ', 'ヽ(ﾟ∀ﾟ)ﾒ(ﾟ∀ﾟ)ﾉ'];
-                const ctaLineEndings = [' 开瑞', ' 冲鸭', ' 上新', ' 福利'];
+                const ctaLineEndings = [' 聚一', ' 冲鸭', ' 上新', ' 福利'];
                 const dividers = ['￣￣￣￣ つ', '〰〰〰〰 👉', '━━━━━━ 🎁'];
                 const dividerEmojis = ['🧧', '🛍️', '💰', '🎟️', '🛒'];
                 const callToActionLines = ['冲本周福利👉', '戳这里领券 👉', '速抢优惠👉', '不容错过👉'];
